public/css/style.css
#sidebar-wrapper {
    position: fixed;
    width: 100%;
    height: 100%;
    background: #000;
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
}

.sidebar-nav {
    position: fixed;
    margin: 0;
    padding: 0;
    list-style: none;
}

.sidebar-nav li {
    text-indent: 20px;
    line-height: 40px;
}

.sidebar-nav li span {
    display: block;
    text-decoration: none;
    color: #999999;
}

.sidebar-nav li span:hover {
    text-decoration: none;
    color: #fff;
    background: rgba(255, 255, 255, 0.2);
}

.sidebar-nav li span:active,
.sidebar-nav li span:focus {
    text-decoration: none;
}

.sidebar-nav .glyphicon {
    margin: 45% auto;
    font-size: 3em;
}


/*START Right side bar*/

favorites .form-control {
    height: 200px !important;
}

favorites .active {
    background-color: gray;
}

.favorites .glyphicon {
    padding-right: 10px;
    padding-top: 10px;
    padding-bottom: 10px;
}


/*END Right side bar*/


/* The Modal (background) */

#login-form {
    display: block;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgb(0, 0, 0);
    /* Fallback color */
    background-color: rgba(0, 0, 0, 0.4);
}


/* Add Animation */

@-webkit-keyframes animatetop {
    from {
        top: -300px;
        opacity: 0
    }
    to {
        top: 0;
        opacity: 1
    }
}

@keyframes animatetop {
    from {
        top: -300px;
        opacity: 0
    }
    to {
        top: 0;
        opacity: 1
    }
}


/* The Close Button */

.close {
    color: #aaaaaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
}

.close:hover,
.close:focus {
    color: #000;
    text-decoration: none;
    cursor: pointer;
}


/*START Login form */

#login-form .modal-content {
    background-color: #EDEDED;
    padding-top: 10px;
    padding-bottom: 20px;
    padding-left: 20px;
    padding-right: 20px;
    border-radius: 10px;
    border-color: #d2d2d2;
    border-width: 2px;
    margin-top: 20%;
    box-shadow: 0 1px 0 #cfcfcf;
    -webkit-animation-name: animatetop;
    -webkit-animation-duration: 0.4s;
    animation-name: animatetop;
    animation-duration: 0.6s
}

#login-form h2 {
    border: 0 solid #fff;
    border-bottom-width: 1px;
    padding-bottom: 10px;
    text-align: center;
}

#login-form .form-control {
    border-radius: 5px;
}

#login-form .wrapper {
    text-align: center;
}


/*END Login form*/

.hidden {
    display: none;
}

